[package]
name = "purdue461_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.91"
serde = { version = "1.0.126", features = ["derive"] }
ureq = { version = "2.6.2", features = ["json"] }
octocrab = "0.16"
tokio = {version = "1.25", features = ["rt", "rt-multi-thread", "macros"]}
simple-log = "1.5.1"
regex = "1"
git2 = "0.16.1"
